--- a/ProyectoFinalOut/ProyectoFinalOut/Ventana2.resx
+++ b/ProyectoFinalOut/ProyectoFinalOut/Ventana2.resx
@@ -4611,4 +4611,18 @@
         YlTsb+DhXyW8+pY6AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        5wAAAOcB8BtYtQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHISURBVFhHzddN
+        KwVRHMfxSZHHIlESC3kBCiVhZ2dhYysPW7JRFjaWdlZehoeNtyBKwlJJNhYoFgrl6fub7rmNce64/5k7
+        +NVH98xMc/6dOXPOCP5z6tCSsyp4M4gnfOTsDN7MQBdc4ygnL1Af3rgC1sJWPrlE2QXUYgJTGfXDxVTA
+        KtTO6h09UEwFbEDtLayndA7dow9KqgImw1a67CBzAX82ApWaA2/ogmIqoB4aft/Mtkj9FuQRUwEj2Idv
+        RbPYRQMUUwGzUDurGzRDMT+CJvh2NItquJgLaITvphapC5iGXiEdy+IWbVBMBYzhEL6JZbGNGijmR1Dp
+        FAvoRXzB2ES0gKTtuBsuA/Bd43gXIj0X/fBxBSQtxVdQ2qHt1neNo/OdUIoF6M8DohvHHnTcFVBqM3rG
+        PVyWET0ftwiXLwWoEU18DpTajtV5tABLUhXw0wgsIXo+Tufdp7ipgKQ5oH1eKWcOaC3pgFIsQJ/HmojR
+        LEAnV8JW8nbs9ndlGL5rnOhbcAf1HRxAnc2pQVpxAh0b14EcMg/dXztsWPVr4YCG5bHwW47hW9GyuIDu
+        rT6HEGYUp3Ad500jrG+Mb/mNf0jVx39JEHwCF6KqoB7poXMAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
