--- a/ProyectoFinalOut/ProyectoFinalOut/Ventana2.resx
+++ b/ProyectoFinalOut/ProyectoFinalOut/Ventana2.resx
@@ -4509,7 +4509,49 @@
         2GabbbbZ9pPMBoltttlmm20/yWyQ2GabbbbZ9hMM+P9JuLc32Qd7ngAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnSalir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        4wAAAOMBD+bfpwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHISURBVFhHzddN
+        KwVRHMfxSZHHIlESC3kBCiVhZ2dhYysPW7JRFjaWdlZehoeNtyBKwlJJNhYoFgrl6fub7rmNce64/5k7
+        +NVH98xMc/6dOXPOCP5z6tCSsyp4M4gnfOTsDN7MQBdc4ygnL1Af3rgC1sJWPrlE2QXUYgJTGfXDxVTA
+        KtTO6h09UEwFbEDtLayndA7dow9KqgImw1a67CBzAX82ApWaA2/ogmIqoB4aft/Mtkj9FuQRUwEj2Idv
+        RbPYRQMUUwGzUDurGzRDMT+CJvh2NItquJgLaITvphapC5iGXiEdy+IWbVBMBYzhEL6JZbGNGijmR1Dp
+        FAvoRXzB2ES0gKTtuBsuA/Bd43gXIj0X/fBxBSQtxVdQ2qHt1neNo/OdUIoF6M8DohvHHnTcFVBqM3rG
+        PVyWET0ftwiXLwWoEU18DpTajtV5tABLUhXw0wgsIXo+Tufdp7ipgKQ5oH1eKWcOaC3pgFIsQJ/HmojR
+        LEAnV8JW8nbs9ndlGL5rnOhbcAf1HRxAnc2pQVpxAh0b14EcMg/dXztsWPVr4YCG5bHwW47hW9GyuIDu
+        rT6HEGYUp3Ad500jrG+Mb/mNf0jVx39JEHwCF6KqoB7poXMAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnAtras.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAUISURBVHhe7VtJ
+        bBxVEG22E7sgHFnEEQkSTf9ORILoJVhCLAKCOSAUEBIcSdgkBCYEKUKs4YK4IISihIQLEuEGSA7LLWBC
+        HOeGTSQEdsbbpLsdO/ZMf6p6KnLcXZ7pcS+/Z8KTnsea/ku9cv+tflnLG17f3Td5lr7Ns/W3PFscAg75
+        lhiDzxngInGGvhuCcgc9R+wK69yzYR01012YMw3dtY29IOgEMADKNRLrDruW/tGctbFCzZcTk5s3X+07
+        xktg8MkLBGTNEd/SX6yad1xF3apHbcuW6z3b2A3GTUeMzZNTOExmzfXXkRnFQ2raJb5lbAdjTkeMK5LT
+        viN2yN3apWRWMajZlds9y/iFMUgVf671GbeRefnCdYxHoEOcwTlDVPKMZ4knyMzsga+8a4sPmI7LxMC3
+        xbtoK5mdDaRpXg4z/OdMh6Uk/KH2y0rlCjI/HbAh8Oq3XEcl5+HUTghnelt8wTTeHbTEgVTDoQvGfFvi
+        nEByOoPn6I9zDXYhA9iWP0qykiFc521RizTUzZxNvE/AMVOyTU42tMSRRPMBnLyeZRvoAcK2+SmSyaN5
+        sBHVaMUe4sTM1sq1JDcOOtVxFXuIxhskdyUm+u68EgpMxitkz7M7n5f1keNy4dOP2ec5c4qNJ1Awg6uQ
+        HR0jFC3rdYkITo/z5XKmb+s7SfYy4AGGr9gKWdB/4F65dOSHUPh5BFNVtmwBHCHZTWAMjymUGee2b5ON
+        v0ZJ9jIUOkD6plhP8nHLGwYw2YJpOf/mKzLwPZK8Ekod4Bjvk/ycXv/7Nslzh/aByoDkxqHSAZ4jjjXF
+        Y9w+Xeg6Rv+xPlkfOkoyV4dSB+AZwazcqDUvLdgCa+LZF54DYZMksTUUO0CGhyS6sWELdMqFve9IubRE
+        8tpDtQOAA+iAg8yDjthc4r4nWckRuK6cf/u19Nz1qvQfNFnbWtG1xX6cAH+LPuiEc8/0y8apMZKkDkuD
+        37H2tSI44Cgugae4h0nYaokrGvXhY6yNrYgXsvgGdH6llWCJKxprcQBwEh1wLvJlWy5+/RV1Wx6s0QEL
+        /zsAflzcQyDVJDjwck9Mghf3Mqh0I3Smxm9sOmW6jVDWW+FFktceQXWCbadAwlY4l8NQlSS2hmoHNA9D
+        Ko/Dah3QCI/DYUzAFsORh+mZJCCi1gG/h+IRmIfHFMiELUNiCh3gW/p7JF/TMAmRK5QVw6Do2J8kexlq
+        HWDcRfKbgC+zHwYXkFsqFTpgZVgcoeJipDH+D18uZ2JuIcleRuFXYyf+kAuffMg+z5n81Rgiy01RWek6
+        +uskNw7MvYVCKlNf86Uj/p2+f+M1JJcHzAVPs5V7gDDzP0kyV0eYImOLn6KVu5/6YOKUufmtlZuhUpHp
+        73lzpuNkajgqPgQVMz0jKGKACd4kqzNgkiHTYJdR30NyOgeOmW5Kko4SAx6Jx/1qwIRjaOxwtPHS0zG+
+        wSx3kpEOsr//Mmj0s1gnJSVsdvZlli5/HuFwaM4JZZ4YwTZ9T+rXvhVcS38YOirjElnDBG8yM1/Mmptu
+        hQ5/jBigkPrgvL3hFjKvONBe4e+4QYVxHP91L9dXvh0w9xYMGQAWcpQmVvFUh/+tSmaoB56xMQMTjMsx
+        sqQfx2AGxi6o23ICkxAxDw9T0cDwRlxIYjawDQxgxmJ43QKMveMFBIjBYfKl64hf4XMUiCsJXs0j8ffR
+        8JklDsDvA1gH9vA3UDM5QdP+A9AOnGD3IoSJAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnSSalir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
         1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAY2SURBVHhe3Zvd
@@ -4544,31 +4586,108 @@
   </data>
   <data name="btnSiguiente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
-        3QAAAd0B1+bDhAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAARvSURBVHhe5ZvN
-        TxNBFMCbeDP+Bx78Rzx4lBY0Jpp4MzEkcvDgwaOeNY3h5HbBGI0GY8LBkKBNlHYpokHkgAk0VEGDAbVC
-        CKQSbBEZ35ud4nb7tjt0O51t9iU/PmZ3533s7rzZN7sxxphSTo0bxxJW6kwim7oWz6SSiYwxBL8toACU
-        BPi3JbYlcV88Bo+l+mwlZGNQurPm8Xg21QfOpIEywJoEj01jX9gnpSsoZGMz9IwOHk1kjevxjDEDRu87
-        nGgV0KcxgzpQF2VDM5CNh+HC8PAROEO9XZnUN8JoJXBdoBN1UzYdBrJRlnjG7AaD8m4D2wjoNrsp22Qh
-        G/2IZ++egDOQIwzSA9oCNlG2+kE2NuL0mHESFK6RhugEbELbKJsbQTZ60TVmXgZllTrl4aGCNlK2e0E2
-        urEHOrOfUBhOwFbZAZJsdMKdz5gjpKJQY47IBIFsdNJRZ94N2E755IRsrCLuebrzDsFvTCAbET7ah3vA
-        k6XSKDuQjSLPhy/VNQv64jFPqGtA+MSC6qiTAZ8oX+saxPSW7qTjqZ821/xjpzytc3vV5N2psSYAcJn0
-        Egcp5dz4PTb0+T1b2Cqy2Y0Vdmc+Q+7XMsBHp88Hf+AzdjsfaZHzuftseXsD1NfKRHGR9WQHyGOCgj46
-        6wkHAbCLGfRBqkiv5kE1LZM/l5QFAX0FFbUBEJUc8gBVbFZ2QLW3qAuCMQPd/w8Ar+GpKWM1ZMsnACiK
-        grBfrTHaZ98uYFI7KsX68Yk76SdKggA+Q9ciAHb1lt5RIRcnHrD18i/upJ8oCEIauo3xuj38E6R0HYje
-        t090BaGMvsdwAYLY2FZ0BQF9h/THV2zIHdqJjiCg73j/J90bdKEhCMmYWI+jNkqBs7lnXz+wxdIaz+tB
-        2dnbFS76S9AgoO94BeBCJbmDH2etQbayvSnM0SOjK3OkbZJYGABcmaU2+mIUXgsz9Mk+cHV6mLRPggIG
-        AJenqY2+jH1fsK3QLCacCMo+CUqBAvBidV6YoFf68xZpnwQ8AE3fArfmXgoT9El57w+79OYxaZ8E/BZo
-        ehBMANPry8IUPWIUJkjbJLECp0EMwu25V/x2mFr7Epji75JwzV8eLk2RNslSTYOhmQjdnH3Odv/uCfca
-        S1DnBTARCslUWIPz9lQ4DA9DOpxH+MOQ7sdhXc4D9uMw9IvjgJaCSN/UU1bR4zxiF0Twh66SGK4DyIgC
-        52tLYjqKopg+cRLjJ0qcdxdFER1lcb+cr8h5wFUWR3QsjDxaegeqaVHnPKY/YmFEx9IYXIYsV6wtjWNG
-        GPg4Se7fCjyXxhBcOKQOUs2N2VFeVcJF0iuQGah9WobX4igS+eVxJNIvSFSByyS6r8ggkX9JCon0a3JV
-        Iv2iZJVIvyqL2Kkxwi9LIzwInXQlgK0yziNkoxdiTIjeBxNOeHYIY4oEmxqN9l6QjX6IeUI0P5pyIqbN
-        0ftszok9QEb0w0kn+IxtF1Ui9uksBa8x2oXW6Hw87QXW3nEBQqxAhezzeRb7B32Y2DKRn/afAAAAAElF
-        TkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAFrBJREFUeF7VmwdYlFf2xu8gKsYkNtSINQo2jCKIqAFFxQ5iCTZQRBEFERALglJE
+        QKUoWFAREFGBoagooth1s8km/81uimmmmsQ0E0uMGjXJ+z/nTuGboZq4Zvf6vM/IzDh8v/ece+659xvF
+        ExwqUgOSKakRqbGR+Dl+jd/D7/2fHyaiszATK8UgESlCVGtVmW2T253vmW790YAM+xsvZjv9TsKQbMff
+        7Xbb3+iZ3uvjtqltL4g4kS3WilD64yhai6fpcxrKz/ofGSrhQRe9Wsx8Kv6pwgE77W/MVHthzfEYbL+Q
+        gW3ndmHTqW1IrEjF+uMpUgnlyfIx6WQaUs9sR+q57Vh1fA2mFc2ATabtjcYbG5fQ53kLe9GKPp/N+K/M
+        DpUIElaqaNWWATsHXg88HIz0C7slbGzZRoQdjMKyogiEFoVjaeEqhBSGIUQdhmD1SgSpV0gtUS9HYMEy
+        qZCiMKwuXYuEEynYdHYbfA8vQt8sm+uqeNUOMU/0od/HU+a/wgiVCBZdGsc2zhmdM/Zh0pnNSD2djpgj
+        CVhRvAbLi1bXCs7QOvDFWgXkh0r55y/Va/nBNdKMmJPxcNzn/NB0g2me8BS96fdz3fiLjBhG8ztSRDnu
+        Hnpn09ktSDm1FRGHYuoNHqjWRFtCFxhCL8oPkVqYHyzllx8ktbhwGWLK12PtqQTY5djfFetEguggWtLV
+        cOF8YkMllgsbi+QOb0Uci8SWMzsJfK0GvLgSXA9fB3h10DrgBflL9PLVKS8Q/oWhiKtIwuKyELTe2uaS
+        8KOC+YSmhYmIEL5Ou4fd5TnO83tlSWSNUa8p1Y3BlZE2ACbY+QrNy1tsoJCDq5BwOhm2ufb3KBuD6Pqa
+        ymv8D40GqihVipfaG+nnM/XpXi28cdRrAVdGWxNlgtVqXr4G1CcvQK+5ef4G8lUvQdypJLgXT4EqQZVO
+        19mM9JhN6C0aNVnbZF9I6XJsPr1dH3VWbVHndDee4zWBG0CTfPIJmDQ3n0BJ3vmL9JqTv9BA/Nya4+vg
+        c2QBTBNNi8Qzcsl8bHWhAcOvOrYaSRVplSmvmO/1iXr14IbRVkJXBztbLz8pLyOtPBYN3zJ/mCaTCUK0
+        IP3pTDDhtOfI1xdeGXUduBJeCa6MtjLSErhAC0uPXgUEqJVnwYIqmlXgq9eK8kh4l/lCtZ56BiGeZQZJ
+        8geGSoSL+TznlWlfBZ7SvrqUN456danuU120GdwYWE2QagLUaqZ6vtQM9bxqFVYRDdeDk0AdZChxcGH8
+        A6sDLXWy2lPBM4AvroQPLjROeZrrNcJXA16gBZfQleDG0DrY6QpNU/vUqOmFPog8k4B++23vibliBNHw
+        EvkIg5ocXue5fw/XNTcKeFnsaoCvKepK8Nn7/DArYx6W5oVhQU4gpmV7a8Crgy5kEZhWHoVz4VGk0UtF
+        3lVVqNHMEl9EnotDq3Tz96gkWhBVvYuiiju8cGpyYmmdr0/k6x31An94Zs1H3suFuHf/HnTj3S/fR8C+
+        UMwsoBSWwJXQBrDFGk0tnmOgKTVofhmZf8If1DEmE9czkq3OQb09t7fc4TE868/A+xRUprtnri/Ur5Ro
+        sQ3HjTs3EZAXSimsiLASuISg9JqNyQfrIXrfyrPR6Hug/13hSvtJzd6h1qEyW2e2J+XMFn17q4Q3KHg6
+        +AJDeIOUZ3iKOsPzPJ+T5YcHvz7QIlcdbIJ/3lJMLdJGVwd8cI4G6NBsTDrkpZf7YZan4lGrQ5WadsQH
+        y85HaPoDzdJYSxYsEd1G7xn7kDc2utSvCZ7n/KPAz1b7Ibw4Rota82ATFhYEy+jpgSUgqZTliYmsI5Vy
+        OzJLo9Kq4vcuORsG+8LBD4W7GEKUNRZElSpGlcZbWi58uuVOB8/rfL3gCyrhZdS18FzgQtXhWszaB5vg
+        VxikiSJBVwE10Ey9XGvQ1DJvBF8Mg0hQ7SHO5swqiQ3GKNF0wE7767yfV6a+suIr1/lFBXXDyyZGC8+V
+        fWqWF769+Z0Ws/bBJvgWLdFEUgHsqpcO0PhnjSYYKeTCavTY1+um6Ci6ES2fLBmNcDEj8HAIoo8kGKS+
+        suhVB88Fr074Ql9Z3XmNXlUSXWsdUA42YbZ6EYaox8K+wAX9852poDnhhQOOhspzhE3+MNgVDIeDehQc
+        i8dj+EF3jD3soTdg1gk/TDvhBbFMBBItN0cGw4TP8HiLa5z6xvCc+o8MX0TwRZolbYp6NqKOxtfbhO9v
+        X0O/7Y4w3doGDbe1RaPtrOfQWK921UjzGr+vSboFWuzqCossa3hW+MEkyfQY8ZozsySXo7Mw4wNMPsMz
+        SP0a5r0Onpc6ZcGrFb6YlrUSb0wsmgWHHBd45S3A/Yf3tZi1Dzah/46hMCM4MwJqssMCT0m1r1X8PjbA
+        LJ1MIQ1Uu6BddsdbVAafJ2rFNFgpBvHpbWzZhiqpr5v3El6b+lXWeYLnal8T/Lh8D/Td7QjzNEuoEltB
+        JLeESGoJt9wZ9Tfh52sYsNMZTXd0wNO7OuCZXR31etZIuuefZu3sgKYkNsQy1w791PYQ3mISUTfRwPOI
+        FEGRJ9bK09v6pL6y6OngOfpK+CkFs2Gb4YyWyV0h4ltAbCDoRFIKaTOZkNoKqk2tMHHfzEcw4Qc4ZIxA
+        s4zOaL67M1rs7oIWmdWrOb3G7+H3PpvRSRrSOtMSLqWuEBFiLVHzwYkcKr5pwX1/9dGvmvrKea9c5xl+
+        fK4HuqbaoEGsObWgBK6Dp4hLeAIXaQSfZg6TLeZokNoak/bPqrcJ18iEIZkuaJXZFebZ3dC6GvHz5tld
+        0SqL9TxaZj4vzWJD3I/NglgvComb64BcDhu029Tu/NZzu6pGnwxQVn39vDeCn545FzGHEpByYiuiSxNo
+        JYlHNBW66DL6+zFSOek46QSpYr1UDOvkBqxlndqIlz97VYtY92ATnLLH4Lk9Vnhub3e0M9JzORq1zbFC
+        mz2WZIqlNIUNGXfUA09vfeZ14tZvkEyt0/t8tOn0Vv2aLwufFr661FfOe97VfXD1svbSntxgE5xzxqFD
+        bi903Ndbrw77ekm1Z+X2hEVuDzKlhzSkDRnmcsQdbXdbXCHuTszOBjSy3+1wY+OJzdVHX9vtGaf+zP3z
+        0CPODqcundVe0pMfP7AJe8fh+bwXDNQlrw+6HOiDzges0Wl/pTEWZIhz6QR02vv8LeLuyuxsQGO+Ucn3
+        5+ob/eE7XGEW0RbdovppL+WvG29+/Ta6Zr0AK7VNpQpsYFnQD91IXfP7SlM6kyGd9lvD+ch4WOb1/J24
+        rZhdGjAk2xEJx5Orjb6y8HntX4CuCf0gljeDCGuGEZtdtZfx1w7HXBf0Lh6gV69iO/QsskOPQlt0L+wv
+        TWFD2IyRZW5kUC8Qd3cDA+KPJ+krf3XRd8+aiWfC22vgV5JWNUOPWDvtJfx147Prn6PPXnv0OzRIqu8h
+        B/Q96IAXDg5En5KBsC6xJ0MGkCEaM0aXT0J3YwMGZA68uf5Eco2V33nrBDRYRkvYMgJfoYm+CG8uf754
+        +e/aS3ny4+6Du5hzaD7sSl/EgCOOUnZHXpSyLR2C/ocH601hMzg73CpomT5g9RNx66dAo947rD9JPJlq
+        sO7rom+b6AQR8ixEKEEroi8iyIDI5mgf0xOXrr6nvaQnN+4+uAffI/5wKB2KwceGYXC5M2kYBtHfWQ5l
+        QzHwqJM0xZYM0pkx7exsdNjT8Qvi1hdBU4s0i79tPrNNn/4cfYbvFU9tYzDBLyVx9LVzX0Z/DSmKtLY5
+        Gq5pDY+93tq1XrPOR5+sXOdjaZ1fdzoRcaT4M0lIOJuM9WdTsOHcJmw8vxmJF1Jx9L1y/Pb77/XSHYq8
+        39EAvFg2HE4nRsKpYiSGVrhI8c+OpBePj8CQ48OlMQ7HhsKezODM8Lm4EM23t3iDuDszOxvQQBWvykk7
+        ly7TXxd9y1gbiCAC5+gvJWhd+iuiL2JI3O0lkDYadnrc5fEOjndkvBlpurM9taQdZYvKDQk3KLw+d9jb
+        C8NzxuObn67RDvG3OvXTL3ex6FgghpW7YPip0RhxegxGnh6r0BiMODVGvjbs5CgyhQ0hM8gIzoyAV4O5
+        EzxE3PpGSMXfyYk4EYngopUy+j3X2UEsIXCdAcr05+ivJsnoE3icotXdTOI2l1vcra3l9pV3YbwR4V68
+        GbWiLak1bS3hu6P9XlqX94zHVze/p5T+tU7duHsH/seWYETFGIw+Ox5jzk3AWNZ510qdc5XP8+ujzoyT
+        hjiTGZwdI06OhdeFuZTFZIEQrSW7HMvE0BnFnggvjYHNekeIQC28Mv11xY+jz+kfTYqtGn2VjH5rffR5
+        S8q7Md6QtKCenHt17sra5/TEMIK/cv173L73a5364fbPCCgPwqiT4zCOQCdcmAjXi+5w+9skTFSIf+bn
+        +fXx592kQWwGZ8dLF2bA5fhoiBliJlHrN0PsxdO2WQNueecuhFhMwDVFn9NfF/0YbfTXkzj6m6pGn1Nf
+        F/3K1LeCRU4PDM0eh09++A437jysU9/euk3wwRh7eoKEY9BJf5+CKa9MxdRXXsLUVz3wklZTX31JPj+Z
+        Xnd/eTIZ4o7xZAZnxsLXFqNHQc/boqGwJmrFdliIhmZJTx0etc1dE/3a0l9f/Ahct9Pj/X01c5+jz/vx
+        ZhR93pHJ6O/pDsfMsbj83bcU1Qd16uqNnwg+BOPPuGEiAU3+O0ETqMc/pmH6azMw4/WZmPl/CtHPM16f
+        gWmvTZeGsBnSiIuTEPZmBMxSzE4TLxdAg3NBExElfAZud0LLsM4aA+pKf13x0+3xZfpXP/d5G8rRb0vR
+        H5w5Gu9/8w1F9X6duvLjLQQcC8GEs24y4hzdaf+YLiE9/+mJ2W94Yc6/ZsP7X3Pg/W8SP9LP/LwXvT6L
+        DGGT2Ajv1+di1kVPCqxYRbw8/43uGtsJc4vUjrf6b6QaoJ//BF1t9SdwZfrzAYc+/Sn62vTXzX1d9Ntu
+        t8S5y2/h6vVf6tSn125SwWP4iTLqDMGRZXCGnvtvb8x7cy5835qHBW+z5kv50t/nv+UDnze9pSFe//SS
+        mRH2zipYF1nfFu2ELdHyFzCrjIaqBFXGSNroNAo1r33+1zf9d3XQR5+XvSHZY3Hlh3t16qPvbmBRWbCM
+        PMNzunPUObIMzoB+78zHoksLEPCuHxa/t5C0SD4GkPzpuYXv+EozfMik+f+eh4i3I6CKU6mJk7fB1RyL
+        85KwUPTrtq3nw94J1AApDVA2P7rqzwYYVf8GVP2N059PYvgw4rkcK4zbPx2ffn+3Vr3/9XVqcoLknOe0
+        V8JzVDnaDM7AQR/4I+TDxVh6ORChl5fIR1bwBwEIfH+RNMePjIj6cA2Glg/9VYwUrsRZ6+2xxqbrTfNH
+        7nSD2Yo2hgbUNP9rqP7G6c/rvvWuQfjwm9u4/O2danXpqx+pvV0iqz0XLi52nPZ6eIo6QzE4gy7/OAgr
+        PwlB2KdLseozEj2GfRqCFR8HI/SjJQj+MABLP1iCuA9j0Xhj4zLi4/a3xltjPEzEXPFCp21df7FNoT2A
+        cQHUzX82wGj+y/O9KtWf0/95mf58MtMhqxfSLuaRCXeq6N2rN7HwaChGnxonl7rJVL25kvOc57Tn+a2B
+        D8AygmPwiM+XYc2VFYj6YiWivtQo8osV8nk2gw1KubIRg4863BcjxDji4y9V1vmVmUYiTiQ5ZbigdXS3
+        mgugvvurfv4bVH9Kfz6e4hOaHpm22PXKQQP4Vz+9Ap/DgRhJHd44al44+lz0OPW54PnSnPd/d4GMPMNz
+        xFdfWY7oL8MQezUccV+vRvw3axD3zWqs+zoCMV+tkkbEfxGN8Esr6bpFJnHx0lfn7XEeKtopmz+b2uzD
+        kbvc0DCcCqJxAdQZYFAAqfvb1kbekak6/7vLIyk+puKDie65NnDe70rQwfA8tBBDCobDuWKU7Ni4g+Mm
+        hpc7jr4PRZ/nMc9pTntO8TUEz5DxBLzhuygkfh+DpGtrpTZ+H42EbyMR/3UkMr7eRk1Xu8+EuehPXPyF
+        qVpujRsOU+Evhnfe0e0Xh20jq/b/RiuArv2VBXC7pgDyDQo+n5fND81/NoCPpvh0hg8oeI/OuzPeoPAO
+        jjc13MO7UfpPoe5ON/e54muiH0ApHSzTmyPP8IkEu+nHdUi7EY8tNxKkNv8Yh2QyIvfHDDifGHpfTBGz
+        iKetZHrE0ZiaoxU2uwei9+ZBlQZUuwKYw8SgAPLOj3t/jQFcADvu7y0N6E4G8MEE7815r857eN6ocK/O
+        mxluc7n4cfrzOs5Vn5c3jv5Kij6n9rqrERR5DfzWm+ux43Yidv2chJ23k7D91gbsv5WBRW/MpxomNz2c
+        +maS6BEHp0tT1YYGewZnD0e3Tf1rWQKNVwCNAXIF0G57Kw3oD2sDA5ylAS5nxspNjm7+z/q/WVT85sj1
+        ntOfqzpX+igZ/TUy3dMo4gyfdXcTcn5JQ/a9VBTczcLaj1bDJM6EvxHCx17c9NQ79Y2HCc2clqZJpqVO
+        OaPRLZVM+BMGdGUDCtkAzRnegKPGBmgKIK/9GgN4/msM4OIX/lmoTH+e4yk/xMroZ/ycjL33tyDv13Qc
+        frgPSZ+vQ5MUs1PU6vB/rOAd35/+tmgDWj3bkAlHh+wdgd47aDr8BQZwBugNoAxI1hqwiwzg6Jf9mo/E
+        z2PRZFOT06K56EfXzQ3P4/u+MCWSOU2H3P57B2HgHhc0TKJGqT4GyBpgOAUMa4DWAKoBPAV4x6ecAtz8
+        cNfHnR6v7bzm87KXRJU/7Xo8dv2UjNJ7+Qh5ZzFME0xLtJF/rPC6wR/YjArj6i5ZVg9GFrjDPN2qsghq
+        VwE2QK4CxkVwn8YAXgV0BtixAbwKVIzUFEHas2uK4EvaIkg9ABVB7u+55eXmhxsfXvs3fBuFHddToL6Z
+        gzGnXR6I5SKRro/nPKf9Y4fXDZ5PT9OeYXyz9BafDC0cC5sDw2C2zUJrAPcBin0AGSD7AO0yyLesNMug
+        ncEyyIeYfI7HyyB3gbyH520sL4Pz3vSRvT83QdzZ8TSI/Wo1Mq9tR8LHMeiU2/Fz4SG86Lq6yGt7DHO+
+        rsEV1YzqQicRr9rRZa/Vg1GHJqPXvsF4Kr29QSPEp0B8m9q4EeK7Nnzjgs/u+fiaT3CdT47WN0K6TZDn
+        PyvrAC+Fyy8HI/nL9dhyJQUjKpwfqNaqcqjJ4e0tr/O81P3hav9HBjcWzcR04WSa1PCY1X7r38YcnoIB
+        6hFoRz2/ciusbIW75feVt6z6lNjD5vBgeVzNJ7bDFEuhbhrwac+cN2Yj6FIg4j6OxYaPEmijNPo3s2Sq
+        8qOEG/1+jjqn/CM3OY9rsOO8u2opPMVI1cYG6k45Xe86HRwN16PTMahoFHocsIfF3p6kHvJObdd840Ko
+        6Aa108D9b1Pg8/o8LHt7OeI+iMPC1/1gd9j2rsl6k0NigphMv4+/6sYbG/7dTzTqNQ2edxojbERvES5W
+        Nd7c+HyXXMt7DiVOcCufBo8Kb0w8PgPjyqdiTPkkjD7ujvEVUzDxtAemnffCnJd94f9aEFb8axUCXgvE
+        pDOTYVNic69pWtOXqaOLEVbCgT6fuzod+H98rv+RwdHg0xYuRm2Ehegh/KgXjxTJJokmZa12mF/qlNPl
+        mlVez4fWhX0J0BZ9i6koFlo/7Lbf8lrbjLbvmiSalosIkSp86E9rslOT5m20n/kX/kfJRx8cITbjKRJ/
+        PZUh2pMYyJLKVh/6M4Ce7Us/8/JlqX2N38Pv5X/D/5ah/yuj/aiDIXh9ZlMYiqu2Uvwcv8bv4fc+gUgL
+        8f9w8vo8cYVpiwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnVerRutas.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
         ugAAAboB6KsBBgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAh9SURBVHhe7Ztp
@@ -4609,48 +4728,6 @@
         sYd4fLzpDcqktX6IwUTQwMuMblZcXKLvuytg9/4TbdK6KKDhfrErP79A92bGgzekdYkQg4mgMZj43Glo
         s5PIltZFAQ188+NVwu4L8OXIUD99IAZ7g0YBsYn4gPiVwBum1cQJUn6U0MAXPK8jcK8feuP7gPcShVJ+
         YlTsb+DhXyW8+pY6AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        5QAAAOUBj+WbPAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHISURBVFhHzddN
-        KwVRHMfxSZHHIlESC3kBCiVhZ2dhYysPW7JRFjaWdlZehoeNtyBKwlJJNhYoFgrl6fub7rmNce64/5k7
-        +NVH98xMc/6dOXPOCP5z6tCSsyp4M4gnfOTsDN7MQBdc4ygnL1Af3rgC1sJWPrlE2QXUYgJTGfXDxVTA
-        KtTO6h09UEwFbEDtLayndA7dow9KqgImw1a67CBzAX82ApWaA2/ogmIqoB4aft/Mtkj9FuQRUwEj2Idv
-        RbPYRQMUUwGzUDurGzRDMT+CJvh2NItquJgLaITvphapC5iGXiEdy+IWbVBMBYzhEL6JZbGNGijmR1Dp
-        FAvoRXzB2ES0gKTtuBsuA/Bd43gXIj0X/fBxBSQtxVdQ2qHt1neNo/OdUIoF6M8DohvHHnTcFVBqM3rG
-        PVyWET0ftwiXLwWoEU18DpTajtV5tABLUhXw0wgsIXo+Tufdp7ipgKQ5oH1eKWcOaC3pgFIsQJ/HmojR
-        LEAnV8JW8nbs9ndlGL5rnOhbcAf1HRxAnc2pQVpxAh0b14EcMg/dXztsWPVr4YCG5bHwW47hW9GyuIDu
-        rT6HEGYUp3Ad500jrG+Mb/mNf0jVx39JEHwCF6KqoB7poXMAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnAtras.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
-        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAUISURBVHhe7VtJ
-        bBxVEG22E7sgHFnEEQkSTf9ORILoJVhCLAKCOSAUEBIcSdgkBCYEKUKs4YK4IISihIQLEuEGSA7LLWBC
-        HOeGTSQEdsbbpLsdO/ZMf6p6KnLcXZ7pcS+/Z8KTnsea/ku9cv+tflnLG17f3Td5lr7Ns/W3PFscAg75
-        lhiDzxngInGGvhuCcgc9R+wK69yzYR01012YMw3dtY29IOgEMADKNRLrDruW/tGctbFCzZcTk5s3X+07
-        xktg8MkLBGTNEd/SX6yad1xF3apHbcuW6z3b2A3GTUeMzZNTOExmzfXXkRnFQ2raJb5lbAdjTkeMK5LT
-        viN2yN3apWRWMajZlds9y/iFMUgVf671GbeRefnCdYxHoEOcwTlDVPKMZ4knyMzsga+8a4sPmI7LxMC3
-        xbtoK5mdDaRpXg4z/OdMh6Uk/KH2y0rlCjI/HbAh8Oq3XEcl5+HUTghnelt8wTTeHbTEgVTDoQvGfFvi
-        nEByOoPn6I9zDXYhA9iWP0qykiFc521RizTUzZxNvE/AMVOyTU42tMSRRPMBnLyeZRvoAcK2+SmSyaN5
-        sBHVaMUe4sTM1sq1JDcOOtVxFXuIxhskdyUm+u68EgpMxitkz7M7n5f1keNy4dOP2ec5c4qNJ1Awg6uQ
-        HR0jFC3rdYkITo/z5XKmb+s7SfYy4AGGr9gKWdB/4F65dOSHUPh5BFNVtmwBHCHZTWAMjymUGee2b5ON
-        v0ZJ9jIUOkD6plhP8nHLGwYw2YJpOf/mKzLwPZK8Ekod4Bjvk/ycXv/7Nslzh/aByoDkxqHSAZ4jjjXF
-        Y9w+Xeg6Rv+xPlkfOkoyV4dSB+AZwazcqDUvLdgCa+LZF54DYZMksTUUO0CGhyS6sWELdMqFve9IubRE
-        8tpDtQOAA+iAg8yDjthc4r4nWckRuK6cf/u19Nz1qvQfNFnbWtG1xX6cAH+LPuiEc8/0y8apMZKkDkuD
-        37H2tSI44Cgugae4h0nYaokrGvXhY6yNrYgXsvgGdH6llWCJKxprcQBwEh1wLvJlWy5+/RV1Wx6s0QEL
-        /zsAflzcQyDVJDjwck9Mghf3Mqh0I3Smxm9sOmW6jVDWW+FFktceQXWCbadAwlY4l8NQlSS2hmoHNA9D
-        Ko/Dah3QCI/DYUzAFsORh+mZJCCi1gG/h+IRmIfHFMiELUNiCh3gW/p7JF/TMAmRK5QVw6Do2J8kexlq
-        HWDcRfKbgC+zHwYXkFsqFTpgZVgcoeJipDH+D18uZ2JuIcleRuFXYyf+kAuffMg+z5n81Rgiy01RWek6
-        +uskNw7MvYVCKlNf86Uj/p2+f+M1JJcHzAVPs5V7gDDzP0kyV0eYImOLn6KVu5/6YOKUufmtlZuhUpHp
-        73lzpuNkajgqPgQVMz0jKGKACd4kqzNgkiHTYJdR30NyOgeOmW5Kko4SAx6Jx/1qwIRjaOxwtPHS0zG+
-        wSx3kpEOsr//Mmj0s1gnJSVsdvZlli5/HuFwaM4JZZ4YwTZ9T+rXvhVcS38YOirjElnDBG8yM1/Mmptu
-        hQ5/jBigkPrgvL3hFjKvONBe4e+4QYVxHP91L9dXvh0w9xYMGQAWcpQmVvFUh/+tSmaoB56xMQMTjMsx
-        sqQfx2AGxi6o23ICkxAxDw9T0cDwRlxIYjawDQxgxmJ43QKMveMFBIjBYfKl64hf4XMUiCsJXs0j8ffR
-        8JklDsDvA1gH9vA3UDM5QdP+A9AOnGD3IoSJAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
